# gpu-count

./: CMakeLists.txt  README.md  cuda-10-0.dockerfile  cuda-10-1.dockerfile  cuda-10-2.dockerfile  cuda-ppc64le-10-0.dockerfile  cuda-ppc64le-10-1.dockerfile  cuda-ppc64le-10-2.dockerfile
src/: main.cpp
tools/: run-configure-and-build.sh
